Bug 1371139 - Part 1. (WIP) Implementation of form auto fill credit card layout.
TODO:
1. Since the 150px layout breakpoint could not fit in the entire label
when credit card icon present, some of the digits would be cut off. We've
considered changing the breakpoint to 185px for credit card result, but
still waiting for UX's final decision.
2. The lack of tests for credit card layout.
3. Cleanup the unnecessary attributes of SVG.

MozReview-Commit-ID: 59gyOlHvSz8

--- a/browser/extensions/formautofill/skin/shared/autocomplete-item.css
+++ b/browser/extensions/formautofill/skin/shared/autocomplete-item.css
@@ -67,6 +67,20 @@ xul|richlistitem[originaltype="autofill-footer"][selected="true"] > .autofill-it
   text-align: start;
 }
 
+.autofill-item-box:not([ac-image=""]) > .profile-label-col::before {
+  float: left;
+  content: "";
+  width: 16px;
+  height: 16px;
+  background-image: var(--primary-icon);
+  margin-right: 5px;
+}
+
+.autofill-item-box > .profile-label-col > .profile-label-affix {
+  font-size: 10px;
+  font-weight: lighter;
+}
+
 .autofill-item-box > .profile-comment-col {
   margin-inline-start: var(--col-spacer);
   text-align: end;
